# Daedalus

./: .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.txt
cmd/: root.go  util.go
src/: bin.rs  cli.rs  cmd.rs  core.rs  custom.rs  lib.rs  main.rs  util.rs
