[package]
name = "mbombo"
version = "3.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Mbombo"
readme = "README.md"
description = "Forge by defining the materials, the destination & indicate pieces to replace"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
regex = "1"
anyhow = "1"
