[package]
name = "daedalus"
version = "3.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Daedalus"
readme = "README.md"
description = "Forge by defining the materials, the destination & indicate pieces to replace"
edition = "2024"

[[bin]]
name = "dd"
path = "src/main.rs"


[dependencies]
issac = { path = "../issac" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"


[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1


[profile.release]
strip = true
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1


[profile.test]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
