[package]
name = "daedalus"
version = "4.0.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Daedalus"
keywords = []
categories = []
readme = "README.md"
description = "Forge by defining the materials, the destination & indicate pieces to replace"
edition = "2024"

[[bin]]
name = "dd"
path = "src/main.rs"


[dependencies]
issac = { path = "../issac" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
